--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,7 +422,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/bg.png") top right;
+  background: url("../img/sampul.png") top right;
   background-size: cover;
 }
 
