--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: #e9e8e6;
+  background: #034efd;
   box-shadow: 0px 0px 25px 0 rgba(0, 0, 0, 0.08);
   z-index: 997;
   padding: 15px 0;
@@ -199,7 +199,7 @@ h6 {
   font-family: "Raleway", sans-serif;
   font-size: 15px;
   font-weight: 600;
-  color: #888888;
+  color: #ffffff;
   white-space: nowrap;
   transition: 0.3s;
   position: relative;
@@ -236,7 +236,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #222222;
+  color: #ffc300;
 }
 
 .navbar .dropdown ul {
@@ -274,7 +274,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #34b7a7;
+  color: #034efd;
 }
 
 .navbar .dropdown:hover>ul {
@@ -310,7 +310,7 @@ h6 {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #222222;
+  color: #ffc300;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -374,7 +374,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #34b7a7;
+  color: #034efd;
 }
 
 .navbar-mobile .getstarted,
@@ -409,7 +409,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #34b7a7;
+  color: #034efd;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -446,8 +446,9 @@ h6 {
 }
 
 #hero h2 {
-  color: #6f6f6f;
+  color: #959595;
   margin: 10px 0 0 0;
+  text-align: center;
   font-size: 22px;
 }
 
@@ -463,11 +464,11 @@ h6 {
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
-  background: #34b7a7;
+  background: #ffbb00;
 }
 
 #hero .btn-about:hover {
-  background: #3dc8b7;
+  background: linear-gradient(180deg, rgba(255,187,0,1) 42%, rgba(255,124,0,1) 100%);
 }
 
 @media (min-width: 1024px) {
